--- a/SHS-009-V/Src/Segment.fx.yaml
+++ b/SHS-009-V/Src/Segment.fx.yaml
@@ -891,15 +891,25 @@ Segment As screen:
                 ZIndex: =4
 
                 Button13 As button:
-                    OnSelect: |-
-                        =SubmitForm(Form_Segment);NewForm(Form_Segment);
-                        UpdateContext({ShowPopup:false});Notify("The Segment has been added sucessfully",NotificationType.Success);ResetForm(Form_Segment)
+                    Fill: =RGBA(54, 176, 75, 1)
+                    HoverFill: =Self.Fill
+                    OnSelect: |
+                        =If(IsBlank(Form_Segment),Notify("Please Add The Fields"));
+                        
+                        SubmitForm(Form_Segment);NewForm(Form_Segment);
+                        UpdateContext({ShowPopup:false});Notify("The Segment has been added sucessfully",NotificationType.Success);ResetForm(Form_Segment);
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
                     Text: ="Save"
                     ZIndex: =1
 
                 Button13_2 As button:
+                    Fill: =RGBA(54, 176, 75, 1)
+                    HoverFill: =Self.Fill
                     OnSelect: |-
                         =UpdateContext({ShowPopup:false})
+                    PressedColor: =Self.Color
+                    PressedFill: =Self.Fill
                     Text: ="Cancel"
                     ZIndex: =2
 
