--- a/SHS-009-V/Src/SHS User.fx.yaml
+++ b/SHS-009-V/Src/SHS User.fx.yaml
@@ -876,6 +876,7 @@
                 ZIndex: =3
 
                 Button14 As button:
+                    DisplayMode: =If(Form7.Valid,DisplayMode.Edit,DisplayMode.Disabled)
                     OnSelect: |-
                         =SubmitForm(Form7);NewForm(Form7);UpdateContext({addpopupshsuser:false});Notify("The Item has been added successfully",NotificationType.Success)
                     RadiusBottomLeft: =17
