--- a/SHS-009-V/Src/SHS User.fx.yaml
+++ b/SHS-009-V/Src/SHS User.fx.yaml
@@ -878,7 +878,7 @@
                 Button14 As button:
                     DisplayMode: =If(Form7.Valid,DisplayMode.Edit,DisplayMode.Disabled)
                     OnSelect: |-
-                        =SubmitForm(Form7);NewForm(Form7);UpdateContext({addpopupshsuser:false});Notify("The Item has been added successfully",NotificationType.Success);ResetForm(Form7
+                        =SubmitForm(Form7);NewForm(Form7);UpdateContext({addpopupshsuser:false});Notify("The Item has been added successfully",NotificationType.Success);ResetForm(Form7)
                     RadiusBottomLeft: =17
                     RadiusBottomRight: =17
                     RadiusTopLeft: =17
