--- a/SHS-009-V/Src/Division.fx.yaml
+++ b/SHS-009-V/Src/Division.fx.yaml
@@ -386,7 +386,7 @@ Division As screen:
                 Button4_4 As button:
                     OnSelect: |-
                         =Remove(Division_1,Gallery6.Selected);UpdateContext({varshowdeletedivpopup:false});Notify("The divison has been deleted successfully",NotificationType.Success)
-                    Text: ="Save"
+                    Text: ="Yes"
                     ZIndex: =1
 
                 Button4_5 As button:
