--- a/SHS-009-V/Src/SHS Configuration.fx.yaml
+++ b/SHS-009-V/Src/SHS Configuration.fx.yaml
@@ -172,6 +172,7 @@
                             ZIndex: =3
 
                         Button17 As button:
+                            OnSelect: =Patch('HACT Config',Defaults(LookUp()))
                             Text: ="Update"
                             ZIndex: =4
 
@@ -355,7 +356,7 @@
                             Width: =10
                             ZIndex: =1
 
-                        TextInput1 As text:
+                        Newyear As text:
                             Default: =""
                             FillPortions: =1
                             HintText: ="Enter New Performance Year "
@@ -370,6 +371,9 @@
                             ZIndex: =7
 
                         Button17_2 As button:
+                            OnSelect: |-
+                                =Set(VarNewYear,Newyear.Text);
+                                Patch('HACT Config',Defaults('HACT Config'),{'New Performance Year':VarNewYear})
                             Text: ="Add"
                             ZIndex: =8
 
@@ -498,6 +502,17 @@
                 LayoutMode: =LayoutMode.Auto
                 ZIndex: =4
 
+                Container26_19 As groupContainer.horizontalAutoLayoutContainer:
+                    DropShadow: =DropShadow.None
+                    FillPortions: =0
+                    Height: =35
+                    LayoutAlignItems: =LayoutAlignItems.Center
+                    LayoutJustifyContent: =LayoutJustifyContent.Center
+                    LayoutMinHeight: =100
+                    LayoutMinWidth: =250
+                    LayoutMode: =LayoutMode.Auto
+                    ZIndex: =1
+
                 Container43_1 As groupContainer.verticalAutoLayoutContainer:
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(139, 154, 159, 1)
@@ -513,7 +528,7 @@
                     RadiusTopLeft: =20
                     RadiusTopRight: =20
                     Width: =Parent.Width
-                    ZIndex: =1
+                    ZIndex: =2
 
                     Label31_1 As label:
                         Fill: =RGBA(214, 221, 224, 1)
@@ -554,6 +569,114 @@
                             PaddingRight: =10
                             PaddingTop: =10
                             Width: =Parent.Width-20
+                            X: =52
+                            Y: =60
+                            ZIndex: =1
+
+                    Container26_15 As groupContainer.horizontalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.Start
+                        DropShadow: =DropShadow.None
+                        FillPortions: =0
+                        Height: =40
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        Width: =Parent.Width
+                        ZIndex: =4
+
+                        Label36_25 As label:
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            PaddingLeft: =20
+                            Text: ="Current Year"
+                            Width: =135
+                            ZIndex: =1
+
+                        Label36_26 As label:
+                            Color: =RGBA(255, 0, 0, 1)
+                            FontWeight: =FontWeight.Bold
+                            Height: =30
+                            Text: ="*"
+                            Width: =194
+                            ZIndex: =2
+
+                    Container26_16 As groupContainer.horizontalAutoLayoutContainer:
+                        DropShadow: =DropShadow.None
+                        FillPortions: =0
+                        Height: =20
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutJustifyContent: =LayoutJustifyContent.Center
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        ZIndex: =5
+
+                        Icon13_6 As icon.HorizontalLine:
+                            BorderColor: =RGBA(102, 102, 102, 1)
+                            BorderThickness: =1
+                            Color: =RGBA(102, 102, 102, 1)
+                            Height: =2
+                            Icon: =Icon.HorizontalLine
+                            PaddingBottom: =10
+                            PaddingLeft: =10
+                            PaddingRight: =10
+                            PaddingTop: =10
+                            Width: =Parent.Width-40
+                            X: =52
+                            Y: =60
+                            ZIndex: =1
+
+                    Container26_17 As groupContainer.horizontalAutoLayoutContainer:
+                        AlignInContainer: =AlignInContainer.Start
+                        DropShadow: =DropShadow.None
+                        FillPortions: =0
+                        Height: =40
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        Width: =Parent.Width
+                        ZIndex: =6
+
+                        Label36_27 As label:
+                            FontWeight: =FontWeight.Semibold
+                            Height: =30
+                            PaddingLeft: =20
+                            Text: ="Current Quarter"
+                            Width: =165
+                            ZIndex: =1
+
+                        Label36_28 As label:
+                            Color: =RGBA(255, 0, 0, 1)
+                            FontWeight: =FontWeight.Bold
+                            Height: =30
+                            Text: ="*"
+                            Width: =194
+                            ZIndex: =2
+
+                    Container26_18 As groupContainer.horizontalAutoLayoutContainer:
+                        DropShadow: =DropShadow.None
+                        FillPortions: =0
+                        Height: =20
+                        LayoutAlignItems: =LayoutAlignItems.Center
+                        LayoutJustifyContent: =LayoutJustifyContent.Center
+                        LayoutMinHeight: =100
+                        LayoutMinWidth: =250
+                        LayoutMode: =LayoutMode.Auto
+                        ZIndex: =7
+
+                        Icon13_7 As icon.HorizontalLine:
+                            BorderColor: =RGBA(102, 102, 102, 1)
+                            BorderThickness: =1
+                            Color: =RGBA(102, 102, 102, 1)
+                            Height: =2
+                            Icon: =Icon.HorizontalLine
+                            PaddingBottom: =10
+                            PaddingLeft: =10
+                            PaddingRight: =10
+                            PaddingTop: =10
+                            Width: =Parent.Width-40
                             X: =52
                             Y: =60
                             ZIndex: =1
